--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          uv pip install . --group dev
+          uv pip install . --group dev --system
 
       - name: Run tests
         run: |
