--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -36,7 +36,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv pip install . --group dev
+        uv pip install . --group dev --system
 
     - name: Run ruff
       run: |
