--- a/.pytest.ini
+++ b/.pytest.ini
@@ -1,3 +1,8 @@
 [pytest]
-addopts = --cov=starlette_dishka --cov-append --cov-report=term-missing --verbose
+addopts =
+    --cov=starlette_dishka
+    --cov-config=.coveragerc
+    --cov-append
+    --cov-report=term-missing
+    --verbose
 asyncio_default_fixture_loop_scope = function
