--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ tests = [
 ]
 
 [project.urls]
-Source = "https://github.com/reagento/dishka"
-Homepage = "https://github.com/reagento/dishka"
-Bug_Tracker = "https://github.com/reagento/dishka/issues"
+Source = "https://github.com/reagento/starlette-dishka"
+Homepage = "https://github.com/reagento/starlette-dishka"
+Download = "https://github.com/reagento/starlette-dishka/#files"
+"Bug Tracker" = "https://github.com/reagento/dishka/starlette-dishka"
+"Telegram chat" = "t.me/reagento_ru"
