--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ license = { text = "Apache-2.0" }
 description = "Starlette integration for dishka"
 requires-python = ">=3.10"
 classifiers = [
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -23,6 +25,7 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: Apache Software License",
     "Operating System :: OS Independent",
+    "Development Status :: 5 - Production/Stable",
 ]
 dependencies = [
     "dishka >= 1.7.1, <2.0.0",
