--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
     "uv == 0.8.*",
     "ruff == 0.13.*",
     "mypy == 1.18.*",
+    "zizmor==1.13.0",
     "nox == 2025.05.01",
 ]
 tests = [
