--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,7 @@ dev = [
     "uv == 0.9.*",
     "ruff == 0.14.*",
     "mypy == 1.18.*",
-    "zizmor >= 1.14.2",
+    "zizmor ~= 1.15.2",
     "nox == 2025.05.01",
 ]
 tests = [
