--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
-    "setuptools==80.10.1",
-    "setuptools-scm[simple]==9.2.2",
+    "setuptools == 80.10.1",
+    "setuptools-scm[simple] == 9.2.2",
 ]
 build-backend = "setuptools.build_meta"
 
@@ -37,18 +37,18 @@ dependencies = [
 
 [dependency-groups]
 dev = [
-    "uv == 0.9.*",
-    "ruff == 0.14.*",
-    "mypy == 1.18.*",
-    "zizmor ~= 1.15.2",
-    "nox == 2025.05.01",
+    "uv == 0.9.26",
+    "ruff == 0.14.14",
+    "mypy == 1.19.1",
+    "zizmor == 1.22.0",
+    "nox == 2025.11.12",
 ]
 tests = [
-    "pytest == 8.*",
-    "pytest-cov == 7.*",
-    "pytest-asyncio == 1.2.*",
-    "httpx == 0.27.*",
-    "asgi-lifespan == 2.1.*",
+    "pytest == 9.0.2",
+    "pytest-cov == 7.0.0",
+    "pytest-asyncio == 1.3.0",
+    "httpx == 0.27.0",
+    "asgi-lifespan == 2.1.0",
 ]
 
 [project.urls]
