--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,11 +36,11 @@ dependencies = [
 ]
 
 [dependency-groups]
-dev = [
-    "uv == 0.9.26",
+typos = ["typos == 1.42.1"]
+zizmor = ["zizmor == 1.22.0"]
+ci = [
     "ruff == 0.14.14",
     "mypy == 1.19.1",
-    "zizmor == 1.22.0",
     "nox == 2025.11.12",
 ]
 tests = [
@@ -49,6 +49,12 @@ tests = [
     "pytest-asyncio == 1.3.0",
     "httpx == 0.27.0",
     "asgi-lifespan == 2.1.0",
+]
+dev = [
+    { include-group = "ci" },
+    { include-group = "typos" },
+    { include-group = "zizmor" },
+    { include-group = "tests" },
 ]
 
 [project.urls]
