--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ readme = "README.md"
 authors = [
     { name = "Andrey Tikhonov", email = "17@itishka.org" },
 ]
-license = { text = "Apache-2.0" }
+license = "Apache-2.0"
+license-files = ["LICENSE"]
 description = "Starlette integration for dishka"
 requires-python = ">=3.10"
 classifiers = [
